--- a/env.example
+++ b/env.example
@@ -36,6 +36,11 @@ RATE_LIMIT_WINDOW=1 minute
 JWT_SECRET=development-secret-change-in-production
 JWT_EXPIRES_IN=24h
 
+# Authentication
+AUTH_ENABLED=true
+REFRESH_TOKEN_SECRET=refresh-token-secret-change-in-production
+REFRESH_TOKEN_EXPIRES_IN=7d
+
 # ===========================================
 # PRODUCTION OVERRIDES
 # ===========================================
